# cpp-from-go2

./: CMakeLists.txt  Makefile  bridge.cpp  bridge.h  bridge.hpp  cpp-from-go2  go.mod  main  main.go  string_collector.cpp  string_collector.hpp
src/: string_collector.cpp  string_collector.hpp  string_collector_impl.cpp  string_collector_impl.hpp
